<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorStartBorder"
    android:orientation="vertical"
    tools:context="productions.darthplagueis.brainpower.LeftRightActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/child_margin"
        android:layout_weight="1"
        android:background="@color/colorStartActivity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="@dimen/leftright_margin"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/child_margin"
            android:layout_weight="1"
            android:background="@color/colorStartBorder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/head_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/child_margin"
                android:background="@color/colorPrimaryDark"
                android:text="@string/leftright_head"
                android:textAlignment="center"
                android:textColor="@color/colorStartText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/head01_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/leftright_head01"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/head_left_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/child_margin"
                    android:layout_marginEnd="@dimen/child_margin"
                    android:background="@color/colorPrimary"
                    android:text="@string/left"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/head_right_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/child_margin"
                    android:background="@color/colorPrimary"
                    android:text="@string/right"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/leftright_margin"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/child_margin"
            android:layout_weight="1"
            android:background="@color/colorStartBorder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cross_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/child_margin"
                android:background="@color/colorPrimaryDark"
                android:text="@string/leftright_cross"
                android:textAlignment="center"
                android:textColor="@color/colorStartText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cross01_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/leftright_cross01"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cross_left_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/child_margin"
                    android:layout_marginEnd="@dimen/child_margin"
                    android:background="@color/colorPrimary"
                    android:text="@string/left"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/cross_right_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/child_margin"
                    android:background="@color/colorPrimary"
                    android:text="@string/right"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/leftright_margin"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/child_margin"
            android:layout_weight="1"
            android:background="@color/colorStartBorder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/legs_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/child_margin"
                android:background="@color/colorPrimaryDark"
                android:text="@string/leftright_cross_legs"
                android:textAlignment="center"
                android:textColor="@color/colorStartText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/legs01_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/leftright_cross_legs01"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/legs_left_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/child_margin"
                    android:layout_marginEnd="@dimen/child_margin"
                    android:background="@color/colorPrimary"
                    android:text="@string/left"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/legs_right_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/child_margin"
                    android:background="@color/colorPrimary"
                    android:text="@string/right"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
