<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorStartBorder"
    android:orientation="vertical"
    tools:context="productions.darthplagueis.brainpower.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorStartActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/child_margin"
            android:background="@color/colorStartBorder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/which_side_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/child_margin_x2"
                android:background="@color/colorPrimaryDark"
                android:text="@string/which_side"
                android:textAlignment="center"
                android:textColor="@color/colorStartText"
                android:textSize="20sp" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/start_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/child_margin"
                android:src="@drawable/leftrightstart"
                app:civ_border_color="@color/colorStartActivity"
                app:civ_border_width="4dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_button01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/child_margin"
                android:layout_weight="1"
                android:background="@color/colorStartButton"
                android:text="@string/start_btn01"
                android:textColor="@color/colorStartText"
                android:textSize="20sp" />

            <Button
                android:id="@+id/start_button02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/child_margin"
                android:layout_weight="1"
                android:background="@color/colorStartButton"
                android:text="@string/start_btn02"
                android:textColor="@color/colorStartText"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Please select from one of the two quizzes to determine."
            android:textSize="@dimen/text_size"
            android:textAlignment="center"
            android:background="@color/colorStartActivity"
            android:layout_margin="@dimen/child_margin"/>

    </LinearLayout>

</LinearLayout>
